# ocean-algorithm-example

./: .env.example  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yaml  run-test.sh
.github/: copilot-instructions.md
algorithm/: config.yaml  pyproject.toml  pyrightconfig.json
algorithm/src/: algorithm.py  data.py  results.py
algorithm/src/age_average/: __init__.py  age_average_algorithm.py
algorithm/src/age_average/application/: calculate_age_statistics_action.py  input_parser.py
algorithm/src/age_average/domain/: __init__.py  age_input_parameters.py  age_request_dto.py  age_response_dto.py  age_results.py  age_statistics.py  user_age.py
algorithm/src/age_average/infrastructure/: __init__.py  file_reader.py  result_writer.py  user_age_mapper.py  user_age_ocean_repository.py
algorithm/src/age_average/services/: __init__.py  age_extractor.py  age_statistics_calculator.py  input_parser.py
algorithm/src/shared/: __init__.py
algorithm/src/shared/domain/: __init__.py  algorithm_interface.py  base_algorithm.py  exceptions.py  input_parameters.py  mapper_interface.py  repository_interface.py  request_dto.py  response_dto.py  results.py
algorithm/src/shared/infrastructure/: __init__.py  algorithm_dependencies.py  base_algorithm.py  file_reader.py  request.py  response.py  response_writer.py
algorithm/src/shared/services/: __init__.py
algorithm/tests/: conftest.py  test_algorithm.py  test_main.py
algorithm/tests/age_average/: __init__.py
algorithm/tests/age_average/application/: test_age_statistics_calculator.py  test_input_parser.py
(+56 files in other folders)
